--- a/package.json
+++ b/package.json
@@ -5,18 +5,8 @@
   "author": "Steve Lukis <20234730+stevelukis@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/contracts": "^4.7.3",
-    "@typechain/hardhat": "^6.1.4",
-    "hardhat": "^2.12.2",
-    "typechain": "^8.1.1"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.3.3",
-    "@types/mocha": "^10.0.0",
-    "@types/node": "^18.11.9",
-    "chai": "^4.3.6",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "hardhat": "^2.12.2"
   }
 }
